nginx-ingress/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aplikacja1
  namespace: aplikacja
spec:
  selector:
    matchLabels:
      app: app1
  replicas: 1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: dockersamples/static-site
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 300m
          requests:
            cpu: 100m
            memory: 250Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aplikacja2
  namespace: aplikacja
spec:
  selector:
    matchLabels:
      app: app2
  replicas: 1
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: httpd
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: aplikacja
  annotations:
    kubernetes.io/change-cause: "Image change"
spec:
  selector:
    matchLabels:
      app: wordpress
#  strategy:
#    type: Recreate
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress:4.8-apache 
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: app-storage
          mountPath: /var/www/html
      volumes:
      - name: app-storage
        persistentVolumeClaim:
          claimName: app-storage-pvc
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: wordpress-mysql
  namespace: aplikacja
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: mysql
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wordpress
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: bazy-pvc
