nginx-ingress/nginx-ingress-controll-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: ingress
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 31000
      name: http # do app1 i app2
    - port: 8080
      nodePort: 32000
      name: http-mgmt # do statusu
  selector:
    app: nginx-ingress-lb
