nginx-ingress/ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: ingress
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  rules:
  - host: app.dominik.com
    http:
      paths:
      - backend:
          serviceName: default-backend
          servicePort: 80
        path: /status
